Replace deprecated Character constructor with valueOf
The Character constructor was replaced with Character.valueOf for improved performance and to adhere to modern Java best practices. This update removes the use of a deprecated method and enhances code maintainability.